--- a/index-animated-bg.html
+++ b/index-animated-bg.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Canna | Home Animated Background</title>
+  <title>Thirteen Media | Web Design & Development, SEO Marketing</title>
 
   <meta charset="utf-8">
   <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -81,9 +81,9 @@
               <li>
                 <a href="#contact">Contact</a>
               </li>
-              <li>
+              <!-- <li>
                 <a href="../index.html">All Demos</a>
-              </li>
+              </li>-->
 
             </ul> <!-- end menu -->
 
